--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
-
+button {
+    cursor: pointer;
+  }
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
